h* + .ui-pretty-overflow fix, optional button group class in ButtonMenu

--- a/style/_utility.scss
+++ b/style/_utility.scss
@@ -36,3 +36,9 @@
   text-overflow: ellipsis;
   white-space: nowrap;
 }
+
+.h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6 {
+  &.ui-pretty-overflow {
+    line-height: 1.2;
+  }
+}
